syntax = "proto3";

package usermgmt_op5_rest_to_grpc;

option go_package = "github.com/juanmanuel0963/go_grpc_usermgmt/v5;go_grpc_usermgmt_op5_rest_to_grpc";

service UserManagement {
  rpc CreateNewUser (NewUser) returns (User) {}
  rpc GetUsers (GetUsersParams) returns (UsersList) {}
}

message NewUser {
  string name = 1;
  int32 age = 2;
}

message User {
  string name = 1;
  int32 age = 2;
  int32 id = 3; 
}

message GetUsersParams {
  string name = 1;
  int32 age = 2;
}

message UsersList {
  repeated User users = 1; 
}